feat: finished mobile version and fixed some styles.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
           <button type="submit">Claim your free trial</button>
           <small
-            >By clicking the button, you are agreeing to our Terms and
-            Services</small
+            >By clicking the button, you are agreeing to our
+            <a href="#">Terms and Services</a></small
           >
         </form>
       </div>
@@ -57,7 +57,12 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Federico Bornaz</a>.
+        >. Coded by
+        <a
+          id="name"
+          href="https://github.com/Fedebornaz/frontend-mentor-signup-form"
+          >Federico Bornaz</a
+        >.
       </p>
     </footer>
   </body>
