feat: finish desktop version and added hover and focus styles

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <a
           id="name"
           href="https://github.com/Fedebornaz/frontend-mentor-signup-form"
+          target="_blank"
           >Federico Bornaz</a
         >.
       </p>
