--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <form>
           <input type="text" placeholder="First Name" />
           <input type="text" placeholder="Last Name" />
-          <input type="email" placeholder="Email Address" />
+          <input id="mail" type="email" placeholder="Email Address" />
           <input type="password" placeholder="Password" />
 
           <button type="submit">Claim your free trial</button>
@@ -66,5 +66,6 @@
         >.
       </p>
     </footer>
+    <script src="./app.js"></script>
   </body>
 </html>
